--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "author": "milosz & ciaran",
   "license": "ISC",
+  "homepage": ".",
   "dependencies": {
     "bcrypt": "^5.0.1",
     "connect-sqlite3": "^0.9.11",
